# SoftEng2025

./: .bash_history  CMakeLists.txt  Dockerfile  HelloProjConfig.h.in  README.md  hello.cpp  script.bat
.github/workflow/: CI.yml
.github/workflows/: CI.yml
cmd/: .bash_history
include/basic/: message.h
mains/: CMakeLists.txt  hello.cpp
src/basic/: CMakeLists.txt  message.cpp
tests/: CMakeLists.txt  test-hello.cpp  test-version.cpp
